Corrected offscreen class styling

--- a/src/index.css
+++ b/src/index.css
@@ -116,10 +116,14 @@
 }
 
 .offscreen {
-  position: "absolute";
-    left: "-9999px";
-    opacity: 0;
-    pointer-events: none;
+  position: absolute;
+  left: -9999px;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  opacity: 0;
+  pointer-events: none;
+  white-space: nowrap;
 }
 
 /* || GENERAL STYLES */
